Bug 164466 - IndexedDB 2.0: Clean up more transaction abort behavior, including tweaks to Index/ObjectStore lifetime
Summary: IndexedDB 2.0: Clean up more transaction abort behavior, including tweaks to ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Brady Eidson
URL:
Keywords:
Depends on:
Blocks: 160306
  Show dependency treegraph
 
Reported: 2016-11-06 14:07 PST by Brady Eidson
Modified: 2016-11-09 13:01 PST (History)
7 users (show)

See Also:


Attachments
patch v1 (64.06 KB, patch)
2016-11-06 14:19 PST, Brady Eidson
no flags Details | Formatted Diff | Diff
Patch (44.17 KB, patch)
2016-11-07 10:52 PST, Brady Eidson
achristensen: review+
beidson: commit-queue-
Details | Formatted Diff | Diff
Patch for landing (44.88 KB, patch)
2016-11-09 10:23 PST, Brady Eidson
commit-queue: commit-queue-
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Brady Eidson 2016-11-06 14:07:02 PST
IndexedDB 2.0: Clean up more transaction abort behavior, including tweaks to Index/ObjectStore lifetime
Comment 1 Brady Eidson 2016-11-06 14:19:43 PST
Created attachment 294035 [details]
patch v1
Comment 2 WebKit Commit Bot 2016-11-06 14:21:51 PST
Attachment 294035 [details] did not pass style-queue:


ERROR: Source/WebCore/bindings/js/JSIDBTransactionCustom.cpp:31:  Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted.  [build/include_order] [4]
Total errors found: 1 in 13 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 3 Brady Eidson 2016-11-07 10:52:49 PST
Created attachment 294070 [details]
Patch
Comment 4 Brady Eidson 2016-11-09 10:23:28 PST
Created attachment 294236 [details]
Patch for landing
Comment 5 WebKit Commit Bot 2016-11-09 11:04:07 PST
The commit-queue encountered the following flaky tests while processing attachment 294236 [details]:

The commit-queue is continuing to process your patch.
Comment 6 WebKit Commit Bot 2016-11-09 11:04:43 PST
The commit-queue encountered the following flaky tests while processing attachment 294236 [details]:

transitions/default-timing-function.html bug 138901 (author: simon.fraser@apple.com)
The commit-queue is continuing to process your patch.
Comment 7 WebKit Commit Bot 2016-11-09 12:09:33 PST
Comment on attachment 294236 [details]
Patch for landing

Rejecting attachment 294236 [details] from commit-queue.

Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'apply-attachment', '--no-update', '--non-interactive', 294236, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit

Last 500 characters of output:
231.
Hunk #9 FAILED at 17334.
Hunk #10 succeeded at 21826 (offset 13 lines).
Hunk #11 FAILED at 25089.
Hunk #12 FAILED at 26802.
Hunk #13 FAILED at 28845.
Hunk #14 succeeded at 28881 (offset 12 lines).
10 out of 14 hunks FAILED -- saving rejects to file Source/WebCore/WebCore.xcodeproj/project.pbxproj.rej
patching file Source/WebCore/bindings/js/JSIDBTransactionCustom.cpp

Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit

Full output: http://webkit-queues.webkit.org/results/2484714
Comment 8 Brady Eidson 2016-11-09 12:26:32 PST
https://trac.webkit.org/changeset/208467
Comment 9 Brady Eidson 2016-11-09 13:01:27 PST
The pointer -> ref followup landed in https://trac.webkit.org/changeset/208471