Source/WebCore/Modules/indexeddb/IDBObjectStore.h
@@ -54,10 +54,9 @@ namespace IndexedDB {
 enum class ObjectStoreOverwriteMode;
 }
 
-class IDBObjectStore final : public RefCounted<IDBObjectStore>, public ActiveDOMObject {
+class IDBObjectStore final : public ActiveDOMObject {
 public:
-    static Ref<IDBObjectStore> create(ScriptExecutionContext&, const IDBObjectStoreInfo&, IDBTransaction&);
-
+    IDBObjectStore(ScriptExecutionContext&, const IDBObjectStoreInfo&, IDBTransaction&);
     ~IDBObjectStore();
 
     const String& name() const;
@@ -102,12 +101,13 @@ public:
 
     void rollbackForVersionChangeAbort();
 
+    void ref();
+    void deref();
+
     void visitReferencedIndexes(JSC::SlotVisitor&) const;
     void renameReferencedIndex(IDBIndex&, const String& newName);
 
 private:
-    IDBObjectStore(ScriptExecutionContext&, const IDBObjectStoreInfo&, IDBTransaction&);
-
     enum class InlineKeyCheck { Perform, DoNotPerform };
     ExceptionOr<Ref<IDBRequest>> putOrAdd(JSC::ExecState&, JSC::JSValue, RefPtr<IDBKey>, IndexedDB::ObjectStoreOverwriteMode, InlineKeyCheck);
     ExceptionOr<Ref<IDBRequest>> doCount(JSC::ExecState&, const IDBKeyRangeData&);
@@ -119,13 +119,20 @@ private:
 
     IDBObjectStoreInfo m_info;
     IDBObjectStoreInfo m_originalInfo;
-    Ref<IDBTransaction> m_transaction;
+
+    // IDBObjectStore objects are always owned by their referencing IDBTransaction.
+    // ObjectStores will never outlive transactions so its okay to keep a raw C++ reference here.
+
+    // FIXME: This should be a reference instead of a pointer (as mentioned by the above comment)
+    // but leaving it a pointer for now makes this patch much easier to review.
+    // I'll make the ptr->ref change right after this patch lands.
+    IDBTransaction* m_transaction;
 
     bool m_deleted { false };
 
     mutable Lock m_referencedIndexLock;
     HashMap<String, std::unique_ptr<IDBIndex>> m_referencedIndexes;
-    HashSet<std::unique_ptr<IDBIndex>> m_deletedIndexes;
+    HashMap<uint64_t, std::unique_ptr<IDBIndex>> m_deletedIndexes;
 };
 
 } // namespace WebCore
